--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.20.12",
     "codelyzer": "^6.0.0",
+    "electron": "^12.0.7",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.0",
