--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "accessible-reports": {
+    "acs-reports": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/accessible-reports",
+            "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -61,18 +61,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "accessible-reports:build"
+            "browserTarget": "acs-reports:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "accessible-reports:build:production"
+              "browserTarget": "acs-reports:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "accessible-reports:build"
+            "browserTarget": "acs-reports:build"
           }
         },
         "test": {
@@ -109,16 +109,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "accessible-reports:serve"
+            "devServerTarget": "acs-reports:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "accessible-reports:serve:production"
+              "devServerTarget": "acs-reports:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "accessible-reports"
+  "defaultProject": "acs-reports"
 }
