--- a/package.json
+++ b/package.json
@@ -19,19 +19,23 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@types/blob-stream": "^0.1.30",
+    "@types/pdfkit": "^0.11.0",
     "json-query": "^2.2.2",
     "moment": "^2.29.1",
-    "pdfmake": "^0.1.71",
+    "pdfmake": "file:../pdfmake",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^12.0.0",
     "@angular-devkit/build-angular": "~0.1100.5",
     "@angular/cli": "~11.0.5",
     "@angular/compiler-cli": "~11.0.5",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.20.12",
+    "brfs": "^2.0.2",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
