--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "buildprod": "ng build --prod --deploy-url /acs-reports/ --delete-output-path --output-path docs",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
